--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ script:
   # Check charts format
   - >
      for dir in `ls ${REPO_DIR}/charts`; do
+      cp ${REPO_DIR}/charts/$dir/values-sample.yml ${REPO_DIR}/charts/$dir/values.yaml
       helm lint ${REPO_DIR}/charts/$dir
       if [ $? != 0 ]; then
        travis_terminate 1
