--- a/scripts/jenkins/values-sample.yml
+++ b/scripts/jenkins/values-sample.yml
@@ -12,7 +12,7 @@ Master:
   Component: "jenkins-master"
   UseSecurity: true
   AdminUser: admin
-  # AdminPassword: <defaults to random>
+  #AdminPassword: SET-THIS
   Cpu: "200m"
   Memory: "256Mi"
   # Set min/max heap here if needed with:
@@ -26,12 +26,12 @@ Master:
   ServicePort: 8080
   # For minikube, set this to NodePort, elsewhere use LoadBalancer
   # Use ClusterIP if your setup includes ingress controller
-  ServiceType: LoadBalancer
+  ServiceType: NodePort
   # Master Service annotations
   ServiceAnnotations: {}
   #   service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
   # Used to create Ingress record (should used with ServiceType: ClusterIP)
-  # HostName: jenkins.cluster.local
+  HostName: jenkins.yourdomain
   # NodePort: <to set explicitly, choose port between 30000-32767
   ContainerPort: 8080
   # Enable Kubernetes Liveness and Readiness Probes
@@ -73,13 +73,13 @@ Master:
 
   Ingress:
     Annotations:
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+     kubernetes.io/ingress.class: nginx
+     kubernetes.io/tls-acme: "true"
 
     TLS:
-    # - secretName: jenkins.cluster.local
-    #   hosts:
-    #     - jenkins.cluster.local
+      - secretName: jenkins-tls
+        hosts:
+          - jenkins.yourdomain
 
 Agent:
   Enabled: true
